@@ -34,6 +34,7 @@ exportMethods(removeEmptyConditions)
 exportMethods(rowViews)
 exportMethods(show)
 exportMethods(summary)
+exportMethods(updateConditionNames)
 exportMethods(updateMedianInjectionTime)
 import(BiocGenerics)
 import(Biostrings)
