@@ -3,6 +3,8 @@
 ## Changes in version 1.1.3
 - Add `conditionNames,AbstractTopDownSet-method` to access
   `rownames(colData(tds))` [2017-12-23].
+- Add `updateConditionNames,AbstractTopDownSet-method`
+  (closes [#60](https://github.com/sgibb/topdownr/issues/60)) [2017-12-23].
 
 ## Changes in version 1.1.2
 - Add `.rbind` to combine scan and method information with different number of
